--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,5 @@
 FROM nginx
 RUN rm /etx/nginx/nginx.conf -f
+ADD uwsgi_params /etc/nginx/uwsgi_params
 ADD nginx.conf /etc/nginx/nginx.conf
 ADD sites-enabled/ /etc/nginx/sites-enabled
