--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,6 +1,13 @@
 Django==1.8.4
-uWSGI==2.0.11.1
+django-debug-toolbar==1.3.2
+django-extensions==1.5.7
+django-filter==0.11.0
+djangorestframework==3.2.4
+Markdown==2.6.2
 psycopg2==2.6.1
 redis==2.10.3
+six==1.9.0
+sqlparse==0.1.16
+uWSGI==2.0.11.1
 virtualenv==13.1.2
 wheel==0.26.0
