--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,9 +38,9 @@ redis:
     - "6379:6379"
 
 data:
+  container_name: database
   restart: always
   image: postgres:latest
   volumes:
     - /var/lib/postgresql
   command: "true"
-
