--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,13 +1,13 @@
-Django==1.8.4
-django-debug-toolbar==1.3.2
-django-extensions==1.5.7
-django-filter==0.11.0
-djangorestframework==3.2.4
-Markdown==2.6.2
+Django==1.9.2
+django-debug-toolbar==1.4
+django-extensions==1.6.1
+django-filter==0.12.0
+djangorestframework==3.3.2
+Markdown==2.6.5
 psycopg2==2.6.1
-redis==2.10.3
-six==1.9.0
-sqlparse==0.1.16
-uWSGI==2.0.11.1
-virtualenv==13.1.2
-wheel==0.26.0
+redis==2.10.5
+six==1.10.0
+sqlparse==0.1.18
+uuid==1.30
+uWSGI==2.0.12
+wheel==0.29.0
