--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -4,6 +4,7 @@ django-extensions==1.6.1
 django-filter==0.13.0
 djangorestframework==3.3.2
 Markdown==2.6.5
+Pillow==3.1.1
 psycopg2==2.6.1
 redis==2.10.5
 six==1.10.0
