--- a/web/bower.json
+++ b/web/bower.json
@@ -31,6 +31,7 @@
     "angular": "~1.5.0",
     "angular-resource": "~1.5.0",
     "angular-route": "~1.5.0",
-    "angular-sanitize": "~1.5.0"
+    "angular-sanitize": "~1.5.0",
+    "restangular": "^1.5.2"
   }
 }
