--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,13 +1,21 @@
-Django==1.9.4
-django-debug-toolbar==1.4
+Django==1.9.9
+django-allauth==0.27.0
+django-bootstrap3==7.0.1
+django-debug-toolbar==1.5
 django-extensions==1.6.1
-django-filter==0.13.0
-djangorestframework==3.3.2
-Markdown==2.6.5
-Pillow==3.1.1
-psycopg2==2.6.1
+django-filter==0.14.0
+django-rest-auth==0.8.1
+djangorestframework==3.4.6
+Markdown==2.6.6
+oauthlib==1.1.2
+Pillow==3.3.1
+psycopg2==2.6.2
+python3-openid==3.0.10
 redis==2.10.5
+requests==2.11.1
+requests-oauthlib==0.6.2
 six==1.10.0
-sqlparse==0.1.19
+sqlparse==0.2.1
 uuid==1.30
 uWSGI==2.0.12
+defusedxml==0.4.1
