--- a/web/bower.json
+++ b/web/bower.json
@@ -32,6 +32,7 @@
     "angular-resource": "~1.5.0",
     "angular-route": "~1.5.0",
     "angular-sanitize": "~1.5.0",
-    "restangular": "^1.5.2"
+    "restangular": "^1.5.2",
+    "bootswatch": "^3.3.7"
   }
 }
