--- a/web/bower.json
+++ b/web/bower.json
@@ -33,6 +33,7 @@
     "angular-route": "~1.5.0",
     "angular-sanitize": "~1.5.0",
     "restangular": "^1.5.2",
-    "bootswatch": "^3.3.7"
+    "bootswatch": "^3.3.7",
+    "angular-cookies": "^1.5.8"
   }
 }
