--- a/web/package.json
+++ b/web/package.json
@@ -29,6 +29,7 @@
     "url": "https://github.com/Redpoint1/Trackie/issues"
   },
   "dependencies": {
-    "bower": "^1.7.7"
+    "bower": "^1.7.7",
+    "openlayers": "^3.20.1"
   }
 }
