--- a/web/bower.json
+++ b/web/bower.json
@@ -34,6 +34,7 @@
     "angular-sanitize": "~1.5.0",
     "restangular": "^1.5.2",
     "bootswatch": "^3.3.7",
-    "angular-cookies": "^1.5.8"
+    "angular-cookies": "^1.5.8",
+    "jquery": "^3.1.1"
   }
 }
