--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,15 +1,20 @@
-Django==1.9.9
+defusedxml==0.4.1
+Django==1.10.5
 django-allauth==0.27.0
 django-bootstrap3==7.0.1
 django-debug-toolbar==1.5
 django-extensions==1.6.1
 django-filter==0.14.0
 django-rest-auth==0.8.1
-djangorestframework==3.4.6
+djangorestframework==3.5.3
+flake8==3.0.4
 Markdown==2.6.6
+mccabe==0.5.2
 oauthlib==1.1.2
 Pillow==3.3.1
 psycopg2==2.6.2
+pycodestyle==2.0.0
+pyflakes==1.2.3
 python3-openid==3.0.10
 redis==2.10.5
 requests==2.11.1
@@ -17,5 +22,4 @@ requests-oauthlib==0.6.2
 six==1.10.0
 sqlparse==0.2.1
 uuid==1.30
-uWSGI==2.0.12
-defusedxml==0.4.1
+uWSGI==2.0.14
