--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,25 +1,27 @@
 defusedxml==0.4.1
 Django==1.10.5
-django-allauth==0.27.0
-django-bootstrap3==7.0.1
-django-debug-toolbar==1.5
-django-extensions==1.6.1
-django-filter==0.14.0
-django-rest-auth==0.8.1
+django-allauth==0.30.0
+django-bootstrap3==8.1.0
+django-debug-toolbar==1.6
+django-extensions==1.7.5
+django-filter==1.0.1
+django-rest-auth==0.9.0
 djangorestframework==3.5.3
-flake8==3.0.4
-Markdown==2.6.6
-mccabe==0.5.2
-oauthlib==1.1.2
-Pillow==3.3.1
+djangorestframework-gis==0.11
+flake8==3.2.1
+Markdown==2.6.7
+mccabe==0.5.3
+oauthlib==2.0.1
+olefile==0.44
+Pillow==4.0.0
 psycopg2==2.6.2
-pycodestyle==2.0.0
-pyflakes==1.2.3
+pycodestyle==2.2.0
+pyflakes==1.3.0
 python3-openid==3.0.10
 redis==2.10.5
-requests==2.11.1
-requests-oauthlib==0.6.2
+requests==2.12.5
+requests-oauthlib==0.7.0
 six==1.10.0
-sqlparse==0.2.1
+sqlparse==0.2.2
 uuid==1.30
 uWSGI==2.0.14
