--- a/web/bower.json
+++ b/web/bower.json
@@ -34,7 +34,10 @@
     "angular-sanitize": "~1.5.0",
     "restangular": "^1.5.2",
     "bootswatch": "^3.3.7",
-    "angular-cookies": "^1.5.8",
-    "jquery": "^3.1.1"
+    "angular-cookies": "~1.5.0",
+    "jquery": "^3.1.1",
+    "angular-animate": "~1.5.0",
+    "angular-touch": "~1.5.0",
+    "angular-ui-grid": "^4.0.2"
   }
 }
