--- a/web/bower.json
+++ b/web/bower.json
@@ -38,6 +38,7 @@
     "jquery": "^3.1.1",
     "angular-animate": "~1.5.0",
     "angular-touch": "~1.5.0",
-    "angular-ui-grid": "^4.0.2"
+    "angular-ui-grid": "^4.0.2",
+    "angular-base64-upload": "^0.1.19"
   }
 }
