--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,9 +1,9 @@
 defusedxml==0.4.1
 Django==1.10.5
 django-allauth==0.30.0
-django-bootstrap3==8.1.0
 django-debug-toolbar==1.6
 django-extensions==1.7.5
+django-extra-fields==0.9
 django-filter==1.0.1
 django-rest-auth==0.9.0
 djangorestframework==3.5.3
