--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -6,6 +6,8 @@ django-extensions==1.7.5
 django-extra-fields==0.9
 django-filter==1.0.1
 django-rest-auth==0.9.0
+django-unused-media==0.1.6
+django-versatileimagefield==1.6.3
 djangorestframework==3.5.3
 djangorestframework-gis==0.11
 flake8==3.2.1
