--- a/web/bower.json
+++ b/web/bower.json
@@ -39,6 +39,7 @@
     "angular-animate": "~1.5.0",
     "angular-touch": "~1.5.0",
     "angular-ui-grid": "^4.0.2",
-    "angular-base64-upload": "^0.1.19"
+    "angular-base64-upload": "^0.1.19",
+    "sidebar-v2": "master"
   }
 }
