--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,29 +1,33 @@
-defusedxml==0.4.1
-Django==1.10.5
-django-allauth==0.30.0
-django-debug-toolbar==1.6
-django-extensions==1.7.5
+appdirs==1.4.3
+defusedxml==0.5.0
+Django==1.11
+django-allauth==0.31.0
+django-debug-toolbar==1.7
+django-extensions==1.7.8
 django-extra-fields==0.9
-django-filter==1.0.1
-django-rest-auth==0.9.0
+django-filter==1.0.2
+django-rest-auth==0.9.1
 django-unused-media==0.1.6
 django-versatileimagefield==1.6.3
-djangorestframework==3.5.3
+djangorestframework==3.6.2
 djangorestframework-gis==0.11
-flake8==3.2.1
-Markdown==2.6.7
-mccabe==0.5.3
-oauthlib==2.0.1
+flake8==3.3.0
+Markdown==2.6.8
+mccabe==0.6.1
+oauthlib==2.0.2
 olefile==0.44
-Pillow==4.0.0
-psycopg2==2.6.2
-pycodestyle==2.2.0
-pyflakes==1.3.0
-python3-openid==3.0.10
+packaging==16.8
+Pillow==4.1.0
+psycopg2==2.7.1
+pycodestyle==2.3.1
+pyflakes==1.5.0
+pyparsing==2.2.0
+python3-openid==3.1.0
+pytz==2017.2
 redis==2.10.5
-requests==2.12.5
-requests-oauthlib==0.7.0
+requests==2.13.0
+requests-oauthlib==0.8.0
 six==1.10.0
-sqlparse==0.2.2
+sqlparse==0.2.3
 uuid==1.30
 uWSGI==2.0.14
