--- a/web/bower.json
+++ b/web/bower.json
@@ -39,7 +39,7 @@
     "angular-animate": "~1.5.0",
     "angular-touch": "~1.5.0",
     "angular-ui-grid": "^4.0.2",
-    "angular-base64-upload": "master",
+    "angular-base64-upload": "0.1.20",
     "sidebar-v2": "master",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13"
