--- a/web/bower.json
+++ b/web/bower.json
@@ -42,6 +42,7 @@
     "angular-base64-upload": "0.1.20",
     "sidebar-v2": "master",
     "moment": "^2.18.1",
-    "moment-timezone": "^0.5.13"
+    "moment-timezone": "^0.5.13",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.47"
   }
 }
