--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -10,6 +10,7 @@ django-rest-auth==0.9.1
 django-unused-media==0.1.6
 django-versatileimagefield==1.7.0
 djangorestframework==3.6.2
+djangorestframework-bulk==0.2.1
 djangorestframework-gis==0.11
 flake8==3.3.0
 Markdown==2.6.8
