--- a/web/bower.json
+++ b/web/bower.json
@@ -43,6 +43,7 @@
     "sidebar-v2": "master",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13",
-    "eonasdan-bootstrap-datetimepicker": "^4.17.47"
+    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
+    "moment-duration-format": "^1.3.0"
   }
 }
