--- a/web/bower.json
+++ b/web/bower.json
@@ -27,7 +27,7 @@
   ],
   "dependencies": {
     "bootstrap": "~3.3.6",
-    "font-awesome": "fontawesome#~4.5.0",
+    "font-awesome": "fontawesome#~4.7 .0",
     "angular": "~1.5.0",
     "angular-resource": "~1.5.0",
     "angular-route": "~1.5.0",
