--- a/web/bower.json
+++ b/web/bower.json
@@ -28,16 +28,16 @@
   "dependencies": {
     "bootstrap": "~3.3.6",
     "font-awesome": "fontawesome#~4.7.0",
-    "angular": "~1.5.0",
-    "angular-resource": "~1.5.0",
-    "angular-route": "~1.5.0",
-    "angular-sanitize": "~1.5.0",
+    "angular": "1.5.11",
+    "angular-resource": "1.5.11",
+    "angular-route": "1.5.11",
+    "angular-sanitize": "1.5.11",
     "restangular": "^1.5.2",
     "bootswatch": "^3.3.7",
-    "angular-cookies": "~1.5.0",
+    "angular-cookies": "1.5.11",
     "jquery": "^3.1.1",
-    "angular-animate": "~1.5.0",
-    "angular-touch": "~1.5.0",
+    "angular-animate": "1.5.11",
+    "angular-touch": "1.5.11",
     "angular-ui-grid": "^4.0.2",
     "angular-base64-upload": "0.1.20",
     "sidebar-v2": "master",
