--- a/web/bower.json
+++ b/web/bower.json
@@ -35,7 +35,7 @@
     "restangular": "^1.5.2",
     "bootswatch": "^3.3.7",
     "angular-cookies": "1.5.11",
-    "jquery": "^3.1.1",
+    "jquery": "2.2.4",
     "angular-animate": "1.5.11",
     "angular-touch": "1.5.11",
     "angular-ui-grid": "^4.0.2",
