--- a/web/bower.json
+++ b/web/bower.json
@@ -26,24 +26,24 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.3.6",
-    "font-awesome": "fontawesome#~4.7.0",
+    "bootstrap": "3.3.7",
+    "font-awesome": "fontawesome#4.7.0",
     "angular": "1.5.11",
     "angular-resource": "1.5.11",
     "angular-route": "1.5.11",
     "angular-sanitize": "1.5.11",
-    "restangular": "^1.5.2",
-    "bootswatch": "^3.3.7",
+    "restangular": "1.6.1",
+    "bootswatch": "3.3.7",
     "angular-cookies": "1.5.11",
     "jquery": "2.2.4",
     "angular-animate": "1.5.11",
     "angular-touch": "1.5.11",
-    "angular-ui-grid": "^4.0.2",
+    "angular-ui-grid": "4.0.4",
     "angular-base64-upload": "0.1.20",
     "sidebar-v2": "master",
-    "moment": "^2.18.1",
-    "moment-timezone": "^0.5.13",
-    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
-    "moment-duration-format": "^1.3.0"
+    "moment": "2.18.1",
+    "moment-timezone": "0.5.13",
+    "eonasdan-bootstrap-datetimepicker": "4.17.47",
+    "moment-duration-format": "1.3.0"
   }
 }
