--- a/web/package.json
+++ b/web/package.json
@@ -29,7 +29,7 @@
     "url": "https://github.com/Redpoint1/Trackie/issues"
   },
   "dependencies": {
-    "bower": "^1.7.7",
-    "openlayers": "^4.0"
+    "bower": "1.8.0",
+    "openlayers": "4.1.1"
   }
 }
