--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.5-onbuild
 
-RUN curl -sL https://deb.nodesource.com/setup_7.x | bash -
+#RUN curl -sL https://deb.nodesource.com/setup_7.x | bash -
 RUN apt-get update
 RUN apt-get install -y binutils libproj-dev gdal-bin
 #RUN apt-get install -y nodejs
