increased timeout for postgresql

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ web:
     - /usr/src/app/static
     - /usr/src/app/media
   env_file: .env
-  command: ./wait-for-it.sh postgres:5432 -- /bin/bash /usr/src/app/startup.sh
+  command: ./wait-for-it.sh -t 30 postgres:5432 -- /bin/bash /usr/src/app/startup.sh
 
 nginx:
   restart: always
